修复FieldClone 不支持实例化内部类bug